<resources>
    <string name="app_name">Сигнал $0$</string>
    <string name="action_settings1">Ваша валюта</string>
    <string name="action_settings2">Частота проверки</string>
    <string name="usd">USD</string>
    <string name="minValue">0</string>
    <string name="current">####</string>
    <string name="maxValue">99999</string>
    <string name="currency_code">Валюта</string>
    <string name="low_border">Нижн. гр.</string>
    <string name="hi_border">Верх. гр.</string>
    <string name="current_value">Текущее</string>
    <string name="switch_value">Вкл?</string>
    <string name="rub">RUB</string>
    <string name="_99999">99999</string>
    <string name="_0">0</string>
    <string name="hrivna">UAH</string>
    <string name="bella_rubl">BYN</string>
    <string name="every_15_min">15 минут</string>
    <string name="every_30_min">30 минут</string>
    <string name="every_5_min">5 минут</string>
    <string name="every_hour">1 час</string>
    <string name="every_2_hour">2 часа</string>
    <string name="every_3_hour">3 часа</string>
    <string name="toggle_off">Сервис OFF</string>
    <string name="toggle_on">Сервис ON</string>
    <string name="every_1_min">1 минута</string>
    <string name="xbt">XBT$</string>
    <string name="eur">EUR</string>
    <string name="oil">OIL$</string>
    <string name="eth">ETH$</string>
    <string name="kazah_tenge">KZT</string>
    <string name="Settings">Настройки оповещения</string>
    <string name="stringSound">Звук</string>
    <string name="stringSoundNon">Без звука</string>
    <string name="stringSoundCoin">Монета</string>
    <string name="stringSoundStandard">Стандартный</string>
    <string name="stringVibro">Вибрация</string>
    <string name="stringNoVibro">Без вибрации</string>
    <string name="strShortVibro">Короткая</string>
    <string name="strStanVibro">Стандартная</string>
    <string name="strDiod">Диод</string>
    <string name="strDiodOn">Вкл</string>
    <string name="strDiodOff">Выкл</string>
    <string name="strExit">EXIT</string>
    <string name="failure_period">Оповещать о неудаче через:</string>
    <string name="eight_hours">8 часов</string>
    <string name="twenty_four_hours">24 часа</string>
    <string name="seventy_two_hours">72 часа</string>
    <string name="time_in_notification">Время в оповещении</string>
    <string name="add">Добавить</string>
    <string name="covid_label">COVID 19 статистика</string>
    <string name="scope">Область</string>
    <string name="number_of_cases">Число случаев</string>
    <string name="deaths">Смертей</string>
    <string name="healed">Вызд.</string>
    <string name="mortality_rate">Смертность</string>
    <string name="whole_world">Мир</string>
    <string name="unknown">\???</string>
    <string name="russia">Россия</string>
</resources>
